welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:-5: error: not found: value haveBaggle
			if (haveBaggle()) 
                            ^Program:6: error: missing arguments for method != in class Object;
follow this method with `_' if you want to treat it as a partially applied function
	if(!=estSurBiscuit)
           ^